--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -58,8 +58,9 @@ jobs:
             # mandatory
             -Dsonar.projectKey=danielkennedy1_springuploader
             -Dsonar.organization=danielkennedy1
+            -Dsonar.sources=src/main/java/ie/portfolio/upload
             # Comma-separated paths to directories containing main source files.
-            #-Dsonar.sources= # optional, default is project base directory
+            # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
             #-Dsonar.projectBaseDir= # optional, default is .
             # Comma-separated paths to directories containing test source files.
