--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -58,7 +58,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=danielkennedy1_springuploader
             -Dsonar.organization=danielkennedy1
-            -Dsonar.sources=../../src/main/java/ie/portfolio/upload
+            -Dsonar.sources=src/main/java
             # -Dsonar.projectBaseDir= .
             # Comma-separated paths to directories containing main source files.
             # optional, default is project base directory
