--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -68,55 +68,76 @@
 #             # Comma-separated paths to directories containing test source files.
 #             #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
 #             # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
-#             #-Dsonar.verbose= # optional, default is false
+# #             #-Dsonar.verbose= # optional, default is false
 
-name: SonarCloud Scan
+# name: SonarCloud Scan
 
+# on:
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+#     branches:
+#       - master
+
+# env:
+#   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+# jobs:
+#   sonarcloud:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Set up JDK 17
+#         uses: actions/setup-java@v2
+#         with:
+#           java-version: '17'
+#           distribution: 'adopt'
+
+#       - name: List project directory contents
+#         run: ls -R
+
+#       - name: Build with Maven
+#         run: mvn package --batch-mode --no-transfer-progress
+
+#       - name: List target directory contents
+#         run: ls -R target
+
+#       - name: Find source files
+#         run: find ./src -name "*.java"
+
+#       - name: SonarCloud Scan
+#         uses: SonarSource/sonarcloud-github-action@master
+#         with:
+#           sonar_login: ${{ env.SONAR_TOKEN }}
+#           project_base_dir: ${{ github.workspace }}
+#           extra_properties: |
+#             sonar.sources=src/main/java
+#             sonar.java.binaries=target/**/*.class
+#             sonar.java.libraries=target/**/*.jar
+#             sonar.java.source=17
+
+name: My Test Single Project
 on:
   push:
     branches:
       - master
   pull_request:
-    branches:
-      - master
-
-env:
-  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+    types: [opened, synchronize, reopened]
 jobs:
   sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
         with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: List project directory contents
-        run: ls -R
-
-      - name: Build with Maven
-        run: mvn package --batch-mode --no-transfer-progress
-
-      - name: List target directory contents
-        run: ls -R target
-
-      - name: Find source files
-        run: find ./src -name "*.java"
-
+          fetch-depth: 0  
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
-        with:
-          sonar_login: ${{ env.SONAR_TOKEN }}
-          project_base_dir: ${{ github.workspace }}
-          extra_properties: |
-            sonar.sources=src/main/java
-            sonar.java.binaries=target/**/*.class
-            sonar.java.libraries=target/**/*.jar
-            sonar.java.source=17
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
