--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -19,8 +19,8 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: Build with Maven
-        run: mvn package --batch-mode --no-transfer-progress
+#       - name: Build with Maven
+#         run: mvn package --batch-mode --no-transfer-progress
       
       - name: Perform scan with Maven
         run: mvn clean verify sonar:sonar -Dsonar.login=${{ secrets.SONAR_LOGIN }} -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=danielkennedy1 -Dsonar.projectKey=danielkennedy1_springuploader
